--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,4 +42,4 @@ jobs:
 
       - name: Deploy via SSH
         run: |
-          ssh ${{ secrets.USERNAME }}@${{ secrets.HOST }} 'bash ~/deploy.sh'
+          ssh -o StrictHostKeyChecking=no -p 13080 ${{ secrets.USERNAME }}@${{ secrets.HOST }} 'bash ~/deploy.sh'
